--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "react-native-webview": "13.12.5",
     "@react-native-async-storage/async-storage": "1.23.1",
     "expo-image-picker": "~16.0.6",
-    "expo-location": "~18.0.7"
+    "expo-location": "~18.0.7",
+    "expo-camera": "~16.0.17"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
